fixed code to show which keys are highlighted as user types

--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,11 @@
 .glyphicon-remove {
   color : #CD2626
 }
+
+.highlighted-key {
+    background-color: yellow;
+}
+
+.no-highlighted-key {
+    background-color: lightgray;
+}
