--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,10 @@
   color : #CD2626
 }
 
-.highlighted-key {
+/* .highlighted-key {
     background-color: yellow;
 }
 
 .no-highlighted-key {
     background-color: lightgray;
-}
+} */
